deployments/x-ray/x-ray-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: x-ray
  labels:
    name: x-ray
