deployments/x-ray/rabbitmq-service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: xray-rabbitmq-headless
  namespace: x-ray
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/component: message-broker
    app.kubernetes.io/instance: xray

spec:

  ports:

  - name: epmd
    port: 4369
    protocol: TCP
    targetPort: epmd

  - name: amqp
    port: 5672
    protocol: TCP
    targetPort: amqp

  - name: dist
    port: 25672
    protocol: TCP
    targetPort: dist

  - name: http-stats
    port: 15672
    protocol: TCP
    targetPort: stats

  selector:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/component: message-broker
    app.kubernetes.io/instance: xray

  type: ClusterIP
---
apiVersion: v1
kind: Service

metadata:
  name: xray-rabbitmq
  namespace: x-ray
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/component: message-broker
    app.kubernetes.io/instance: xray

spec:

  ports:

  - name: epmd
    port: 4369
    protocol: TCP
    targetPort: epmd

  - name: amqp
    port: 5672
    protocol: TCP
    targetPort: amqp

  - name: dist
    port: 25672
    protocol: TCP
    targetPort: dist

  - name: http-stats
    port: 15672
    protocol: TCP
    targetPort: stats

  selector:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/component: message-broker
    app.kubernetes.io/instance: xray

  type: ClusterIP
